--- a/app/views/room_papa/hotels.html.erb
+++ b/app/views/room_papa/hotels.html.erb
@@ -1,148 +1,357 @@
 <!-- filter  -->
-<div style="border: 1px solid black;width: 24%;position: fixed;right: 0;background-color: white;padding: 1.5%">
+<div style="border: 1px solid black;width: 24%;right: 0;background-color: white;padding: 1.5%">
 	<!-- pricing -->
 	<form action = "/room_papa/filters">
 		pricing<br>
-		min: <input type="number" name="min_price" value="<%=params[:min_price]%>" min="0" max="100000">	
-		max: <input type="number" name="max_price" value="<%=params[:max_price]%>" min="0" max="100000">	<br>
+		min: <input type="number" id = "min_price" name="min_price" value="<%=params[:min_price]%>" min="0" max="100000">	
+		max: <input type="number" id = "max_price" name="max_price" value="<%=params[:max_price]%>" min="0" max="100000">	<br>
 		<!-- hotel -->
 		hotel facilities<br>
-		Parking:
-		<%if params[:parking] == 'on'%>
-			<input type="checkbox" name="parking" checked="true"><br>
+		BASIC:<br>
+		Bar:		
+		<%if params[:bar] == 'on'%>
+			<input type="checkbox" id = "bar" name="bar" checked="true"><br>
 		<%else%>
-			<input type="checkbox"  name="parking"><br>
+			<input type="checkbox" id = "bar" name="bar"><br>
 		<%end%>
 		Gym:
 		<%if params[:gym] == 'on'%>
-			<input type="checkbox" name="gym" checked="true"><br>
+			<input type="checkbox" id = "gym" name="gym" checked="true"><br>
 		<%else%>
-			<input type="checkbox"  name="gym"><br>
-		<%end%>
-		Spa:
-		<%if params[:spa] == 'on'%>
-			<input type="checkbox" name="spa" checked="true"><br>
-		<%else%>
-			<input type="checkbox"  name="spa"><br>
-		<%end%>
-		Pool:		
-		<%if params[:pool] == 'on'%>
-			<input type="checkbox"  name="pool" checked="true"><br>
-		<%else%>
-			<input type="checkbox"  name="pool"><br>
-		<%end%>
-		Bar:		
-		<%if params[:bar] == 'on'%>
-			<input type="checkbox" name="bar" checked="true"><br>
-		<%else%>
-			<input type="checkbox" name="bar"><br>
-		<%end%>
+			<input type="checkbox"  id = "gym" name="gym"><br>
+		<%end%>		
 		Lift:	
 		<%if params[:lift] == 'on'%>
-			<input type="checkbox"  name="lift" checked="true"><br>
+			<input type="checkbox"  id = "lift" name="lift" checked="true"><br>
 		<%else%>
-			<input type="checkbox"  name="lift"><br>
+			<input type="checkbox"  id = "lift" name="lift"><br>
+		<%end%>
+		Parking:
+		<%if params[:parking] == 'on'%>
+			<input type="checkbox" id = "parking" name="parking" checked="true"><br>
+		<%else%>
+			<input type="checkbox"  id = "parking" name="parking"><br>
 		<%end%>
 		Restaurant:	
 		<%if params[:restaurant] == 'on'%>
-			<input type="checkbox"  name="restaurant" checked="true"><br>
+			<input type="checkbox"  id = "restaurant" name="restaurant" checked="true"><br>
 		<%else%>
-			<input type="checkbox"  name="restaurant"><br>
+			<input type="checkbox"  id = "restaurant" name="restaurant"><br>
 		<%end%>
+		Spa:
+		<%if params[:spa] == 'on'%>
+			<input type="checkbox" id = "spa" name="spa" checked="true"><br>
+		<%else%>
+			<input type="checkbox"  id = "spa" name="spa"><br>
+		<%end%>
+		Swimming Pool:		
+		<%if params[:swimmingpool] == 'on'%>
+			<input type="checkbox"  id = "swimmingpool" name="swimmingpool" checked="true"><br>
+		<%else%>
+			<input type="checkbox"  id = "swimmingpool" name="swimmingpool"><br>
+		<%end%>
+
+		FOOD:<br>
+		Barbecue:		
+		<%if params[:barbecue] == 'on'%>
+			<input type="checkbox" id = "barbecue" name="barbecue" checked="true"><br>
+		<%else%>
+			<input type="checkbox" id = "barbecue" name="barbecue"><br>
+		<%end%>
+		Coffee Machine:
+		<%if params[:coffeemachine] == 'on'%>
+			<input type="checkbox" id = "coffeemachine" name="coffeemachine" checked="true"><br>
+		<%else%>
+			<input type="checkbox"  id = "coffeemachine" name="coffeemachine"><br>
+		<%end%>		
+		Dining Area:	
+		<%if params[:diningarea] == 'on'%>
+			<input type="checkbox"  id = "diningarea" name="diningarea" checked="true"><br>
+		<%else%>
+			<input type="checkbox"  id = "diningarea" name="diningarea"><br>
+		<%end%>
+		Dining Table:	
+		<%if params[:diningtable] == 'on'%>
+			<input type="checkbox"  id = "diningtable" name="diningtable" checked="true"><br>
+		<%else%>
+			<input type="checkbox"  id = "diningtable" name="diningtable"><br>
+		<%end%>
+		High Chair:		
+		<%if params[:highchair] == 'on'%>
+			<input type="checkbox"  id = "highchair" name="highchair" checked="true"><br>
+		<%else%>
+			<input type="checkbox"  id = "highchair" name="highchair"><br>
+		<%end%>
+		Kitchenette:
+		<%if params[:kitchenette] == 'on'%>
+			<input type="checkbox" id = "kitchenette" name="kitchenette" checked="true"><br>
+		<%else%>
+			<input type="checkbox"  id = "kitchenette" name="kitchenette"><br>
+		<%end%>
+		Microwave:		
+		<%if params[:microwave] == 'on'%>
+			<input type="checkbox"  id = "microwave" name="microwave" checked="true"><br>
+		<%else%>
+			<input type="checkbox"  id = "microwave" name="microwave"><br>
+		<%end%>
+		Outdoor Dining Area:		
+		<%if params[:outdoordiningarea] == 'on'%>
+			<input type="checkbox"  id = "outdoordiningarea" name="outdoordiningarea" checked="true"><br>
+		<%else%>
+			<input type="checkbox"  id = "outdoordiningarea" name="outdoordiningarea"><br>
+		<%end%>
+		Outdoor Furniture:		
+		<%if params[:outdoorfurniture] == 'on'%>
+			<input type="checkbox"  id = "outdoorfurniture" name="outdoorfurniture" checked="true"><br>
+		<%else%>
+			<input type="checkbox"  id = "outdoorfurniture" name="outdoorfurniture"><br>
+		<%end%>
+		min_price
+
+		Refrigerator:		
+		<%if params[:refrigerator] == 'on'%>
+			<input type="checkbox"  id = "" name="refrigerator" checked="true"><br>
+		<%else%>
+			<input type="checkbox"  id = "" name="refrigerator"><br>
+		<%end%>
+		Stovetop:		
+		<%if params[:stovetop] == 'on'%>
+			<input type="checkbox"  id = "stovetop" name="stovetop" checked="true"><br>
+		<%else%>
+			<input type="checkbox"  id = "stovetop" name="stovetop"><br>
+		<%end%>
+		Tea Coffee Machine:		
+		<%if params[:teacoffeemachine] == 'on'%>
+			<input type="checkbox"  id = "teacoffeemachine" name="teacoffeemachine" checked="true"><br>
+		<%else%>
+			<input type="checkbox"  id = "toaster" name="teacoffeemachine"><br>
+		<%end%>
+		Toaster:		
+		<%if params[:toaster] == 'on'%>
+			<input type="checkbox"  id = "toaster" name="toaster" checked="true"><br>
+		<%else%>
+			<input type="checkbox"  id = "toaster" name="toaster"><br>
+		<%end%>
+
+		DISABILITY:<br>
+		Elevator:		
+		<%if params[:elevator] == 'on'%>
+			<input type="checkbox"  id = "elevator" name="elevator" checked="true"><br>
+		<%else%>
+			<input type="checkbox"  id = "elevator" name="elevator"><br>
+		<%end%>
+		Staircase Only:		
+		<%if params[:staircaseonly] == 'on'%>
+			<input type="checkbox"  id = "staircaseonly" name="staircaseonly" checked="true"><br>
+		<%else%>
+			<input type="checkbox"  id = "staircaseonly" name="staircaseonly"><br>
+		<%end%>
+		Grab Rails Toilet:		
+		<%if params[:grabrailstoilet] == 'on'%>
+			<input type="checkbox"  id = "grabrailstoilet" name="grabrailstoilet" checked="true"><br>
+		<%else%>
+			<input type="checkbox"  id = "grabrailstoilet" name="grabrailstoilet"><br>
+		<%end%>
+		Ground Floor:		
+		<%if params[:groundfloor] == 'on'%>
+			<input type="checkbox"  id = "groundfloor" name="groundfloor" checked="true"><br>
+		<%else%>
+			<input type="checkbox"  id = "groundfloor" name="groundfloor"><br>
+		<%end%>
+		wheelchair:		
+		<%if params[:wheelchair] == 'on'%>
+			<input type="checkbox"  id = "wheelchair" name="wheelchair" checked="true"><br>
+		<%else%>
+			<input type="checkbox"  id = "wheelchair" name="wheelchair"><br>
+		<%end%>
+		
 		<!-- rooms -->
 		Room facilities<br>
-		Wifi:
+		BASIC:<br>
+		Clothes Racks:
+		<%if params[:clothesracks] == 'on'%>
+			<input type="checkbox" id = "clothesracks" name="clothesracks" checked="true"><br>
+		<%else%>
+			<input type="checkbox" id = "clothesracks" name="clothesracks"><br>
+		<%end%>
+		Drying Racking:
+		<%if params[:dryingracking] == 'on'%>
+			<input type="checkbox" id = "dryingracking" name="dryingracking" checked="true"><br>
+		<%else%>
+			<input type="checkbox" id = "dryingracking" name="dryingracking"><br>
+		<%end%>
+
+		Fold Up Bed:
+		<%if params[:foldupbed] == 'on'%>
+			<input type="checkbox" id = "foldupbed" name="foldupbed" checked="true"><br>
+		<%else%>
+			<input type="checkbox" id = "foldupbed" name="foldupbed"><br>
+		<%end%>
+
+		Sofabed:
+		<%if params[:sofabed] == 'on'%>
+			<input type="checkbox"  id = "sofabed" name="sofabed" checked="true"><br>
+		<%else%>
+			<input type="checkbox"  id = "sofabed" name="sofabed"><br>
+		<%end%>
+
+		Wardrobe:
+		<%if params[:wardrobe] == 'on'%>
+			<input type="checkbox"  id = "wardrobe" name="wardrobe" checked="true"><br>
+		<%else%>
+			<input type="checkbox"  id = "wardrobe" name="wardrobe"><br>
+		<%end%>
+		Carpeted:
+		<%if params[:carpeted] == 'on'%>
+			<input type="checkbox" id = "carpeted" name="carpeted" checked="true"><br>
+		<%else%>
+			<input type="checkbox" id = "carpeted" name="carpeted"><br>
+		<%end%>
+
+		Walking Closet:
+		<%if params[:walkingcloset] == 'on'%>
+			<input type="checkbox" id = "walkingcloset" name="walkingcloset" checked="true"><br>
+		<%else%>
+			<input type="checkbox" id = "walkingcloset" name="walkingcloset"><br>
+		<%end%>
+
+		Extra Long Beds:
+		<%if params[:extralongbeds] == 'on'%>
+			<input type="checkbox" id = "extralongbeds" name="extralongbeds" checked="true"><br>
+		<%else%>
+			<input type="checkbox" id = "extralongbeds" name="extralongbeds"><br>
+		<%end%>
+
+		Fireplace:
+		<%if params[:fireplace] == 'on'%>
+			<input type="checkbox" id = "fireplace" name="fireplace" checked="true"><br>
+		<%else%>
+			<input type="checkbox" id = "fireplace" name="fireplace"><br>
+		<%end%>
+
+		Heater:
+		<%if params[:heater] == 'on'%>
+			<input type="checkbox" id = "heater" name="heater" checked="true"><br>
+		<%else%>
+			<input type="checkbox" id = "heater" name="heater"><br>
+		<%end%>
+		Inter Cnnecting Rooms:
+		<%if params[:interconnectingrooms] == 'on'%>
+			<input type="checkbox" id = "interconnectingrooms" name="interconnectingrooms" checked="true"><br>
+		<%else%>
+			<input type="checkbox" id = "interconnectingrooms" name="interconnectingrooms"><br>
+		<%end%>
+
+		Iron:
+		<%if params[:iron] == 'on'%>
+			<input type="checkbox" id = "iron" name="iron" checked="true"><br>
+		<%else%>
+			<input type="checkbox" id = "iron" name="iron"><br>
+		<%end%>
+
+		Desk:
+		<%if params[:desk] == 'on'%>
+			<input type="checkbox" id = "desk" name="desk" checked="true"><br>
+		<%else%>
+			<input type="checkbox" id = "desk" name="desk"><br>
+		<%end%>
+		WiFi:
 		<%if params[:wifi] == 'on'%>
-			<input type="checkbox" name="wifi" checked="true"><br>
+			<input type="checkbox" id = "wifi" name="wifi" checked="true"><br>
 		<%else%>
-			<input type="checkbox" name="wifi"><br>
-		<%end%>
-		Geyser:
-		<%if params[:geyser] == 'on'%>
-			<input type="checkbox" name="geyser" checked="true"><br>
-		<%else%>
-			<input type="checkbox" name="geyser"><br>
-		<%end%>
-
-		AC:
-		<%if params[:ac] == 'on'%>
-			<input type="checkbox" name="ac" checked="true"><br>
-		<%else%>
-			<input type="checkbox" name="ac"><br>
-		<%end%>
-
-		Cooler:
-		<%if params[:cooler] == 'on'%>
-			<input type="checkbox"  name="cooler" checked="true"><br>
-		<%else%>
-			<input type="checkbox"  name="cooler"><br>
-		<%end%>
-
-		Fan:
-		<%if params[:fan] == 'on'%>
-			<input type="checkbox"  name="fan" checked="true"><br>
-		<%else%>
-			<input type="checkbox"  name="fan"><br>
+			<input type="checkbox" id = "wifi" name="wifi"><br>
 		<%end%>
 		Smoking:
 		<%if params[:smoking] == 'on'%>
-			<input type="checkbox" name="smoking" checked="true"><br>
+			<input type="checkbox" id = "smoking" name="smoking" checked="true"><br>
 		<%else%>
-			<input type="checkbox" name="smoking"><br>
+			<input type="checkbox" id = "smoking" name="smoking"><br>
 		<%end%>
-
-		Balcony:
-		<%if params[:balcony] == 'on'%>
-			<input type="checkbox" name="balcony" checked="true"><br>
-		<%else%>
-			<input type="checkbox" name="balcony"><br>
-		<%end%>
-
-		Bathroom:
-		<%if params[:bathroom] == 'on'%>
-			<input type="checkbox" name="bathroom" checked="true"><br>
-		<%else%>
-			<input type="checkbox" name="bathroom"><br>
-		<%end%>
-
 		TV:
 		<%if params[:tv] == 'on'%>
-			<input type="checkbox" name="tv" checked="true"><br>
+			<input type="checkbox" id = "tv" name="tv" checked="true"><br>
 		<%else%>
-			<input type="checkbox" name="tv"><br>
-		<%end%>
-
-		Family Room:
-		<%if params[:familyroom] == 'on'%>
-			<input type="checkbox" name="familyroom" checked="true"><br>
-		<%else%>
-			<input type="checkbox" name="familyroom"><br>
-		<%end%>
-
-		PWD:
-		<%if params[:pwd] == 'on'%>
-			<input type="checkbox" name="pwd" checked="true"><br>
-		<%else%>
-			<input type="checkbox" name="pwd"><br>
-		<%end%>
-
-		Laundry:
-		<%if params[:laundry] == 'on'%>
-			<input type="checkbox" name="laundry" checked="true"><br>
-		<%else%>
-			<input type="checkbox" name="laundry"><br>
-		<%end%>
-
-		Kettle:
-		<%if params[:kettle] == 'on'%>
-			<input type="checkbox" name="kettle" checked="true"><br>
-		<%else%>
-			<input type="checkbox" name="kettle"><br>
+			<input type="checkbox" id = "tv" name="tv"><br>
 		<%end%>
 		
-			
-	<input type="submit" value="FILTER">	
-</form>
+		RESTROOM:<br>
+		Bathroom:
+		<%if params[:bathroom] == 'on'%>
+			<input type="checkbox" id = "bathroom" name="bathroom" checked="true"><br>
+		<%else%>
+			<input type="checkbox" id = "bathroom" name="bathroom"><br>
+		<%end%>
+		Toilet Paper:
+		<%if params[:toiletpaper] == 'on'%>
+			<input type="checkbox" id = "toiletpaper" name="toiletpaper" checked="true"><br>
+		<%else%>
+			<input type="checkbox" id = "toiletpaper" name="toiletpaper"><br>
+		<%end%>
+
+		Bathtub:
+		<%if params[:bathtub] == 'on'%>
+			<input type="checkbox" id = "" name="bathtub" checked="true"><br>
+		<%else%>
+			<input type="checkbox" id = "" name="bathtub"><br>
+		<%end%>
+
+		Shower:
+		<%if params[:shower] == 'on'%>
+			<input type="checkbox" id = "shower" name="shower" checked="true"><br>
+		<%else%>
+			<input type="checkbox" id = "shower" name="shower"><br>
+		<%end%>
+		Bath Robe:
+		<%if params[:bathrobe] == 'on'%>
+			<input type="checkbox" id = "bathrobe" name="bathrobe" checked="true"><br>
+		<%else%>
+			<input type="checkbox" id = "bathrobe" name="bathrobe"><br>
+		<%end%>
+		Free Toiletries:
+		<%if params[:freetoiletries] == 'on'%>
+			<input type="checkbox" id = "freetoiletries" name="freetoiletries" checked="true"><br>
+		<%else%>
+			<input type="checkbox" id = "freetoiletries" name="freetoiletries"><br>
+		<%end%>
+
+		Hairdryer:
+		<%if params[:hairdryer] == 'on'%>
+			<input type="checkbox" id = "hairdryer" name="hairdryer" checked="true"><br>
+		<%else%>
+			<input type="checkbox" id = "hairdryer" name="hairdryer"><br>
+		<%end%>
+		Spatub:
+		<%if params[:spatub] == 'on'%>
+			<input type="checkbox" id = "spatub" name="spatub" checked="true"><br>
+		<%else%>
+			<input type="checkbox" id = "spatub" name="spatub"><br>
+		<%end%>
+		Shared Bathroom:
+		<%if params[:sharedbathroom] == 'on'%>
+			<input type="checkbox" id = "sharedbathroom" name="sharedbathroom" checked="true"><br>
+		<%else%>
+			<input type="checkbox" id = "sharedbathroom" name="sharedbathroom"><br>
+		<%end%>
+		Slippers:
+		<%if params[:slippers] == 'on'%>
+			<input type="checkbox" id = "slippers" name="slippers" checked="true"><br>
+		<%else%>
+			<input type="checkbox" id = "slippers" name="slippers"><br>
+		<%end%>
+		Toilets:
+		<%if params[:toilets] == 'on'%>
+			<input type="checkbox" id = "toilets" name="toilets" checked="true"><br>
+		<%else%>
+			<input type="checkbox" id = "toilets" name="toilets"><br>
+		<%end%>
+		Geyser:
+		<%if params[:geyser] == 'on'%>
+			<input type="checkbox" id = "geyser" name="geyser" checked="true"><br>
+		<%else%>
+			<input type="checkbox" id = "geyser" name="geyser"><br>
+		<%end%>
+		<input type="submit" value="FILTER" id='submit_filter' remote = 'true'>	
+	</form>
 
 </div>
 
@@ -222,19 +431,90 @@ NO CASE MATCH
 	}
 </style>
 
-<!-- <script type="text/javascript">
+<script type="text/javascript">
+	var checkin = <%=params[:checkin].split('-')[0]%> + '-' + <%=params[:checkin].split('-')[1].to_i-1%> + '-' + <%=params[:checkin].split('-')[2]%>
+	var checkout = <%=params[:checkout].split('-')[0]%> + '-' + <%=params[:checkout].split('-')[1].to_i-1%> + '-' + <%=params[:checkout].split('-')[2]%>
+	console.log(checkin)
 	$(document).ready(function(){
-		$('#submit_order').click(function(e){
+		$('#submit_filter').click(function(e){
 			e.preventDefault();
 			$.ajax({
-				url: '/bookings/order',
+				url: '/room_papa/hotels',
 				type: 'get',
 				data: {
-						room_object: ('#room_object').value,
-						checkin: ('#checkin_date').value,
-						checkout_date: ('#checkout_date').value
-				}
+						max_price: $('#max_price').value,
+						min_price: $('#max_price').value,
+						bar: $('#max_price').value,
+						gym: $('#gym').value,
+						lift: $('#lift').value,
+						parking: $('#parking').value,
+						restaurant: $('#restaurant').value,
+						spa: $('#spa').value,
+						swimmingpool: $('#swimmingpool').value,
+						barbecue: $('#barbecue').value,
+						coffeemachine: $('#coffeemachine').value,
+						diningarea: $('#diningtable').value,
+						diningtable: $('#diningtable').value,
+						highchair: $('#highchair').value,
+						kitchenette: $('#kitchenette').value,
+						microwave: $('#microwave').value,
+						outdoordiningarea: $('#outdoordiningarea').value,
+						outdoorfurniture: $('#outdoorfurniture').value,
+						refrigerator: $('#refrigerator').value,
+						stovetop: $('#stovetop').value,
+						teacoffeemachine: $('#teacoffeemachine').value,
+						toaster: $('#toaster').value,
+						elevator: $('#elevator').value,
+						staircaseonly: $('#staircaseonly').value,
+						grabrailstoilet: $('#grabrailstoilet').value,
+						groundfloor: $('#groundfloor').value,
+						wheelchair: $('#wheelchair').value,
+						clothesracks: $('#clothesracks').value,
+						dryingracking: $('#dryingracking').value,
+						foldupbed: $('#foldupbed').value,
+						sofabed: $('#sofabed').value,
+						wardrobe: $('#wardrobe').value,
+						carpeted: $('#carpeted').value,
+						walkingcloset: $('#walkingcloset').value,
+						extralongbeds: $('#extralongbeds').value,
+						fireplace: $('#fireplace').value,
+						heater: $('#heater').value,
+						interconnectingrooms: $('#interconnectingrooms').value,
+						iron: $('#iron').value,
+						desk: $('#desk').value,
+						wifi: $('#wifi').value,
+						smoking: $('#smoking').value,
+						tv: $('#tv').value,
+						bathroom: $('#bathroom').value,
+						toiletpaper: $('#toiletpaper').value,
+						bathtub: $('#bathtub').value,
+						shower: $('#shower').value,
+						bathrobe: $('#bathrobe').value,
+						freetoiletries: $('#freetoiletries').value,
+						hairdryer: $('#hairdryer').value,
+						spatub: $('#spatub').value,
+						sharedbathroom: $('#sharedbathroom').value,
+						slippers: $('#slippers').value,
+						toilets: $('#toilets').value,
+						geyser: $('#geyser').value,
+						city:'<%=params[:city]%>',
+						data_value: <%=raw params[:data_value].to_json %>,
+						checkin: checkin,
+						checkout: checkout
+					},
+				progress:function(loadTime,status){
+                          console.log(loadTime);
+                         },
+                success: function (result,status,object) {
+                          console.log(result);
+                          console.log(status);
+                          window.location.href = result["url_link"];
+                         },
+                error:function(result,status) {
+                          alert(result.responseText);
+                          console.log(status);
+                         }
 			});
 		});
 	});
-</script> -->
+</script>
